# learning

./: .gitignore
attention_lab/: .gitignore  AGENTS.md  README.md  fineweb.py  pyproject.toml  train_gpt2.py
attention_lab/configs/: baseline_124m_fineweb1b.yaml  baseline_125m_fineweb1b.yaml  baseline_15m_fineweb100m.yaml  baseline_15m_fineweb100m_sanity.yaml  baseline_16m_fineweb100m.yaml  baseline_30m_fineweb100m.yaml  baseline_70m_fineweb300m.yaml  trilinear_cp_15m_fineweb100m.yaml
attention_lab/configs/experimental/: trilinear_cp_15m_fineweb100m.yaml
attention_lab/data/fineweb_edu_100m/: manifest.json
attention_lab/docs/: architecture_experiment_contract.md  architecture_variant_checklist.md  pre_experiment_cleanup_checklist.md  upstream_borrowing_audit.md
attention_lab/docs/experiments/: E001_cp_trilinear_attention_plan.md  E002_multitrack_qkv_shift_register_plan.md  experiments.yaml
attention_lab/docs/guides/: experiment_queue_discipline_checklist.md
attention_lab/reports/: baseline_15m_fineweb100m_summary.md  baseline_30m_fineweb100m_summary.md  baseline_harness_verification.md
attention_lab/reports/schema/: attention_diagnostics.schema.json  run_summary.schema.json
attention_lab/scripts/: bootstrap.sh  compare_runs.py  eval_generate.py  eval_hellaswag.py  eval_loss.py  export_hf.py  inspect_model_config.py  list_experiments.py  prepare_fineweb_edu.py  prepare_fineweb_edu_100m.sh  qkv_track_destructive_test.py  queue_daemon.sh  run_full_30m_baseline.sh  run_full_baseline.sh  run_sanity.sh  summarize_run.py  train.py  validate_experiment.py  verify_cuda.py  verify_data.py  verify_run.py  write_data_manifest.py
attention_lab/src/attention_lab/: __init__.py  export_hf.py
attention_lab/tests/: conftest.py  test_attention_cp_bilinear.py  test_attention_cp_trilinear.py  test_attention_diagnostics.py  test_attention_multi_qkv_global.py  test_checkpointing.py  test_compare_runs.py  test_config.py  test_data_loader.py  test_data_manifest.py  test_docs_guides.py  test_eval_loss.py  test_experiments.py  test_export_hf.py  test_hellaswag_eval.py  test_metrics.py  test_model_multi_qkv_global.py  test_model_standard.py  test_qkv_rotation_diagnostics.py  test_queue_cli_leaderboard_watchdog.py  test_queue_doctor.py  test_queue_end_to_end.py  test_queue_ledger.py  test_queue_reporting.py  test_queue_runner.py  test_queue_screener.py  test_resume.py  test_summarize_run.py  test_train_multi_qkv_step_position_threading.py  test_train_tiny.py  test_train_tiny_cp.py  test_validate_experiment.py  test_validate_experiment_e002.py  test_validate_experiment_e002_multi_qkv.py  test_verify_run.py
construct_mismatch/: .gitignore  README.md  pyproject.toml
construct_mismatch/artifacts/behavior/: behavior_examples.csv  behavior_summary.csv
construct_mismatch/artifacts/datasets/: dataset_notes.md
construct_mismatch/artifacts/directions/: certainty_direction_metrics.csv  certainty_steering_metrics.csv  sentiment_direction_metrics.csv  sentiment_steering_metrics.csv
construct_mismatch/artifacts/patching/: certainty_patching_metrics.csv  certainty_top_sites.csv  sentiment_patching_metrics.csv  sentiment_top_sites.csv
construct_mismatch/artifacts/probes/: certainty_probe_metrics.csv  sentiment_probe_metrics.csv
construct_mismatch/artifacts/scoring/: construct_mismatch_matrix.csv  object_classifications.csv
construct_mismatch/artifacts/tokenization/: gpt2_small_target_tokens.csv
construct_mismatch/configs/: experiment.yaml  gpt2_small.yaml
construct_mismatch/data/processed/: certainty_decoupling.jsonl  certainty_heldout.jsonl  certainty_train.jsonl  sentiment_decoupling.jsonl  sentiment_heldout.jsonl  sentiment_train.jsonl
construct_mismatch/reports/: construct_mismatch_report.md
construct_mismatch/scripts/: build_datasets.py  check_behavior.py  inspect_tokenization.py  make_figures.py  run_all.py  run_direction_experiment.py  run_patching_experiment.py  run_probe_experiment.py
construct_mismatch/src/construct_mismatch/: __init__.py  activations.py  datasets.py  directions.py  metrics.py  model.py  patching.py  probes.py  reporting.py  scoring.py  tokenization.py
construct_mismatch/tests/: test_datasets.py  test_metrics.py  test_scoring.py  test_scoring_artifacts.py  test_tokenization.py
ml_research/local-mi-lab/: .gitignore  README.md  pyproject.toml
ml_research/local-mi-lab/configs/: gpt2_small_candidate_characterization_seed20.yaml  gpt2_small_candidate_characterization_seed21.yaml  gpt2_small_candidate_characterization_seed22.yaml  gpt2_small_clean_corrupt_tiny.yaml  gpt2_small_head_specific_induction.yaml  gpt2_small_head_specific_induction_seed1.yaml  gpt2_small_head_specific_induction_seed2.yaml  gpt2_small_induction.yaml  gpt2_small_induction_controls.yaml  gpt2_small_induction_controls_seed1.yaml  gpt2_small_induction_controls_seed2.yaml  gpt2_small_induction_heldout_seed10.yaml  gpt2_small_induction_heldout_seed11.yaml  gpt2_small_induction_heldout_seed12.yaml  gpt2_small_ioi_tiny.yaml  pythia410m_basic.yaml
ml_research/local-mi-lab/docs/: experiment_ideas.md  experiment_log.md  learning_path.md  publication_figures.md  resource_plan.md
ml_research/local-mi-lab/notebooks/: 001_model_and_tokens.ipynb  002_logit_lens.ipynb  003_induction_heads.ipynb  004_activation_patching.ipynb  005_head_specific_induction_candidate.ipynb  007_candidate_characterization.ipynb
ml_research/local-mi-lab/scripts/: build_characterization_failure_taxonomy.py  build_characterization_prompts.py  build_heldout_induction_prompts.py  build_toy_prompts.py  cache_activations.py  check_model_capability.py  compare_candidate_characterization_runs.py  compare_head_specific_induction_runs.py  compare_heldout_robustness_runs.py  inspect_candidate_characterization_counterexamples.py  inspect_head_hooks.py  inspect_heldout_counterexamples.py  inspect_replicated_head.py  make_publication_figures.py  run_attention_patterns.py  (+15 more)
ml_research/self-ground/: .gitignore  README.md  pyproject.toml
ml_research/self-ground-v2/: .gitignore  MILESTONE_NEG1_REPORT.md  README.md  pyproject.toml
(+717 files in other folders)
