[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "construct-mismatch"
version = "0.1.0"
description = "Focused construct-validity mismatch experiments for GPT-2 Small activation-space interpretability methods."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "torch",
  "transformer-lens",
  "numpy",
  "pandas",
  "scikit-learn",
  "matplotlib",
  "tqdm",
  "pyyaml",
  "pyarrow<21",
  "pytest",
  "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
