[project]
name = "local-mi-lab"
version = "0.1.0"
description = "A small local mechanistic-interpretability practice lab."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "torch",
  "transformer-lens",
  "transformers",
  "einops",
  "numpy",
  "pandas",
  "scikit-learn",
  "matplotlib",
  "plotly",
  "rich",
  "tqdm",
  "pyyaml",
  "psutil",
  "pyarrow<21",
]

[project.optional-dependencies]
notebook = [
  "jupyter",
  "ipykernel",
  "nbformat",
  "nbclient",
]

[dependency-groups]
dev = [
  "pytest",
  "ruff",
  "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/local_mi_lab"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
