[project]
name = "self-ground"
version = "0.1.0"
description = "SELF-GROUND v0 negation-scope causal mechanism evaluation harness."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "pydantic>=2.7",
    "rich>=13.7",
    "sae-lens>=5.0",
    "torch>=2.2",
    "transformer-lens>=2.0",
    "typer>=0.12",
]

[project.scripts]
self-ground = "self_ground.cli:app"
mechanismlab = "mechanismlab.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/self_ground", "src/mechanismlab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "integration: slow tests that download or load real model/SAE artifacts",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
